k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysite-prod
  labels:
    name: mysite-prod
    environment: production
